// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abis wasm bindings computes a contract address 1`] = `
AztecAddress {
  "buffer": {
    "data": [
      17,
      160,
      201,
      96,
      127,
      185,
      91,
      146,
      4,
      147,
      169,
      211,
      33,
      226,
      156,
      174,
      240,
      174,
      157,
      149,
      81,
      249,
      149,
      226,
      160,
      18,
      239,
      108,
      218,
      140,
      217,
      137,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis wasm bindings computes a function leaf 1`] = `
Fr {
  "value": 3087577661303601311028613516544548769914327454147174509447606645757193921240n,
}
`;

exports[`abis wasm bindings computes a function selector 1`] = `
{
  "data": [
    169,
    5,
    156,
    187,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings computes commitment nonce 1`] = `
Fr {
  "value": 13496027098354931963552650893736311555066207973436318315473061104559483240114n,
}
`;

exports[`abis wasm bindings computes contract leaf 1`] = `
Fr {
  "value": 14753252017424563237038015065402454919037294146339173328174383872613705551896n,
}
`;

exports[`abis wasm bindings computes function tree root 1`] = `
Fr {
  "value": 10347099364184817470749359182712341488544005132594679915946302065868679911885n,
}
`;

exports[`abis wasm bindings computes siloed commitment 1`] = `
Fr {
  "value": 16534789767920606571541683139317465939081284769910575930923078591683356873433n,
}
`;

exports[`abis wasm bindings computes siloed nullifier 1`] = `
Fr {
  "value": 4957445512951137590281746823314455197982530036508465893793736233926551006579n,
}
`;

exports[`abis wasm bindings computes unique commitment 1`] = `
Fr {
  "value": 4300635537850003871451650912699252898033249035618622792407744400807361159458n,
}
`;

exports[`abis wasm bindings hashes a tx request 1`] = `
{
  "data": [
    9,
    147,
    79,
    91,
    226,
    138,
    10,
    112,
    232,
    93,
    216,
    102,
    148,
    107,
    140,
    248,
    74,
    162,
    97,
    120,
    34,
    67,
    33,
    238,
    45,
    64,
    241,
    181,
    200,
    240,
    102,
    80,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes constructor info 1`] = `
Fr {
  "value": 14413776780856791051352661515120218597395029077515512071070438560797521666643n,
}
`;

exports[`abis wasm bindings hashes empty function args 1`] = `
Fr {
  "value": 0n,
}
`;

exports[`abis wasm bindings hashes function args 1`] = `
Fr {
  "value": 18906676604864959005173276375312600640969342814693694325262988108261136820631n,
}
`;

exports[`abis wasm bindings hashes many function args 1`] = `
Fr {
  "value": 16458590480032755384470108712609389694120470087885514794475677859856835664159n,
}
`;
